--- a/adminportal/src/main/resources/templates/newsInfo.html
+++ b/adminportal/src/main/resources/templates/newsInfo.html
@@ -30,7 +30,7 @@
                           <div class="col-xs-12">
                               <div class="panel panel-default">
                                   <div class="panel-body">
-                                        <img alt="" th:src="*{'data:image/jpeg;base64,'+{news.image}}" class="img-responsive" />
+                                        <img alt="" th:src="@{/assets/img/news/}+${news.id}+'.jpg'" class="img-responsive" />
                                   </div>
                               </div>
                           
