--- a/news-website/src/main/resources/templates/newsDetail.html
+++ b/news-website/src/main/resources/templates/newsDetail.html
@@ -13,7 +13,6 @@
     
     
       <link href="https://fonts.googleapis.com/css?family=Merriweather%7CRoboto:400,400i,700,700" rel="stylesheet"> 
-
       <script src="/assets/js/538d9daa14.js" crossorigin="anonymous"></script>
       <script src="https://kit.fontawesome.com/584c55a7ed.js" crossorigin="anonymous"></script>
 
@@ -546,7 +545,7 @@ Article Sidebar</title>
           
         </ul>
 
-        <a href="index-2.html" class="navbar-brand mx-auto order-2 my-2"><img alt="Magazinize" src="/assets/img/newspaper-sm.png"></a>
+        <a href="index-2.html" class="navbar-brand mx-auto order-2 my-2"><img alt="Magazinize" th:src="#{adminPath}+@{/assets/img/}+${settings.smallLogo}"></a>
       
       </div>
 
