Update categoryDetail and newsDetail

--- a/news-website/src/main/resources/templates/common/header.html
+++ b/news-website/src/main/resources/templates/common/header.html
@@ -278,7 +278,7 @@ xmlns:sec="http://www.w3.org/1999/xhtml">
 
               <!--Diğer-->
               <div class="nav-item dropdown allow-hover" >
-                <a class="nav-link dropdown-toggle" href="post-by-category.html" id="menuNextPages" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">DİĞER</a>
+                <a class="nav-link dropdown-toggle" id="menuNextPages" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">DİĞER</a>
                 <div class="dropdown-menu" aria-labelledby="menuNextPages">
 
                     <div data-th-each="afterSixCategory : ${afterSixByCategoryList}">
