--- a/news-website/src/main/resources/templates/common/header.html
+++ b/news-website/src/main/resources/templates/common/header.html
@@ -291,7 +291,7 @@ xmlns:sec="http://www.w3.org/1999/xhtml">
 
               <!--VİP NEWS-->
               <div class="nav-item">
-                <a sec:authorize="isAuthenticated()" href="#" class="nav-link text-success">VİP&nbsp;NEWS</a>
+                <a sec:authorize="isAuthenticated()" th:href="@{/vipCategory?name=Vip News}" class="nav-link text-success">VİP&nbsp;NEWS</a>
               </div>
               <!--VİP NEWS-->
 
